Update styles for the component

--- a/src/components/Book.module.css
+++ b/src/components/Book.module.css
@@ -6,6 +6,7 @@
   border-radius: 4px;
   border: solid 1px #e8e8e8;
   margin: 1em 0;
+  background-color: white;
 }
 
 .book {
@@ -62,5 +63,9 @@
 
 .chapter_heading {
   font-size: 1rem;
-  color: #d3d3d3;
+  color: #b4b4b4;
+}
+
+.chapter {
+  margin-top: 6px;
 }
