--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -41,7 +41,8 @@
   opacity: 0.5;
 }
 
-.navigation ul a:focus, .navigation ul a:active {
+.navigation ul a:focus,
+.navigation ul a:active {
   opacity: 1;
 }
 
