--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,9 @@
   --textColor: #0290ff;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
