--- a/src/components/Book.module.css
+++ b/src/components/Book.module.css
@@ -67,3 +67,31 @@
   font-size: 1rem;
   color: #b4b4b4;
 }
+
+.line {
+  width: 5em;
+  border: 1px solid #e3e3e3;
+  transform: rotate(90deg);
+  margin-right: -4em;
+}
+
+@media (max-width: 658px) {
+  .wrapper {
+    flex-direction: column;
+    width: 100%;
+    gap: 2em;
+  }
+}
+
+@media (max-width: 768px) {
+  .wrapper {
+    width: 100%;
+    gap: 2em;
+  }
+}
+
+@media (max-width: 868px) {
+  .line {
+    display: none;
+  }
+}
