--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -51,3 +51,18 @@
   font-weight: bold;
   color: #0290ff;
 }
+
+@media (max-width: 768px) {
+
+  .wrapper {
+    flex-direction: column;
+  }
+
+  .header {
+    padding: 1em;
+  }
+
+  .im_icon {
+    display: none;
+  }
+}
